// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cloud-run flare checkAuthentication prints instructions on how to authenticate when authentication fails 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...

[Error] Unable to authenticate with GCP.

To authenticate with GCP, please follow these steps:
1. If you haven't already, install the Google Cloud SDK: https://cloud.google.com/sdk/docs/install
2. Run \\"gcloud auth application-default login\\" and follow the prompts in your browser to log in.
3. After logging in, run the \`cloud-run flare\` command again.

"
`;

exports[`cloud-run flare getCloudRunServiceConfig prints config when running as a dry run 1`] = `
"
[Dry Run] 🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...

{ template: { containers: [ [Object] ], someData: 'data' } }

💾 Saving configuration...

🚫 The flare files were not sent as it was executed in dry run mode.
ℹ️ Your output files are located at: .datadog-ci

"
`;

exports[`cloud-run flare getCloudRunServiceConfig stops and prints error when getCloudRunServiceConfig fails 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...
[Error] Unable to fetch service configuration: MOCK ERROR: Some API error
"
`;

exports[`cloud-run flare prints correct headers prints dry-run header 1`] = `
"
[Dry Run] 🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No service specified. [-s,--service]
[Error] No project specified. [-p,--project]
[Error] No region specified. [-r,--region]
[Error] No case ID specified. [-c,--case-id]
[Error] No email specified. [-e,--email]
"
`;

exports[`cloud-run flare prints correct headers prints non-dry-run header 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No service specified. [-s,--service]
[Error] No project specified. [-p,--project]
[Error] No region specified. [-r,--region]
[Error] No case ID specified. [-c,--case-id]
[Error] No email specified. [-e,--email]
"
`;

exports[`cloud-run flare prompts for confirmation before sending does not send when user answers prompt with no 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...

{ template: { containers: [ [Object] ], someData: 'data' } }

💾 Saving configuration...


🚫 The flare files were not sent based on your selection.
ℹ️ Your output files are located at: .datadog-ci

"
`;

exports[`cloud-run flare prompts for confirmation before sending sends when user answers prompt with yes 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...

{ template: { containers: [ [Object] ], someData: 'data' } }

💾 Saving configuration...

[Error] Unable to save configuration: Unable to zip files: Folder does not exist: .datadog-ci
"
`;

exports[`cloud-run flare validates required flags prints error when no API key in env variables 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No Datadog API key specified. Set an API key with the DATADOG_API_KEY environment variable.
"
`;

exports[`cloud-run flare validates required flags prints error when no case ID specified 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No case ID specified. [-c,--case-id]
"
`;

exports[`cloud-run flare validates required flags prints error when no email specified 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No email specified. [-e,--email]
"
`;

exports[`cloud-run flare validates required flags prints error when no location specified 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No region specified. [-r,--region]
"
`;

exports[`cloud-run flare validates required flags prints error when no project specified 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No project specified. [-p,--project]
"
`;

exports[`cloud-run flare validates required flags prints error when no service specified 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...
[Error] No service specified. [-s,--service]
"
`;

exports[`cloud-run flare validates required flags runs successfully with all required options specified 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...

{ template: { containers: [ [Object] ], someData: 'data' } }

💾 Saving configuration...

[Error] Unable to save configuration: Unable to zip files: Folder does not exist: .datadog-ci
"
`;

exports[`cloud-run flare validates required flags uses API key ENV variable and runs as expected 1`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...

{ template: { containers: [ [Object] ], someData: 'data' } }

💾 Saving configuration...

[Error] Unable to save configuration: Unable to zip files: Folder does not exist: .datadog-ci
"
`;

exports[`cloud-run flare validates required flags uses API key ENV variable and runs as expected 2`] = `
"
🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...

{ template: { containers: [ [Object] ], someData: 'data' } }

💾 Saving configuration...

[Error] Unable to save configuration: Unable to zip files: Folder does not exist: .datadog-ci

🐶 Generating Cloud Run flare to send your configuration to Datadog...

🔑 Verifying GCP credentials...
GCP credentials verified!

🔍 Fetching service configuration...

{ template: { containers: [ [Object] ], someData: 'data' } }

💾 Saving configuration...

[Error] Unable to save configuration: Unable to zip files: Folder does not exist: .datadog-ci
"
`;

exports[`lambda flare AWS Lambda configuration prints config when running as a dry run 1`] = `
"
[Dry Run] 🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json

🚫 The flare files were not sent as it was executed in dry run mode.
ℹ️ Your output files are located at: mock-folder/.datadog-ci

"
`;

exports[`lambda flare AWS Lambda configuration stops and prints error when getLambdaFunctionConfig fails 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...
[Error] Unable to get Lambda function configuration: MOCK ERROR: Some API error
"
`;

exports[`lambda flare AWS credentials continues when getAWSCredentials() returns valid credentials 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare AWS credentials requests AWS credentials when none are found by getAWSCredentials() 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare AWS credentials stops and prints error when getAWSCredentials() fails 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...
[Error] MOCK ERROR: Error getting AWS credentials
"
`;

exports[`lambda flare AWS credentials stops and prints error when requestAWSCredentials() fails 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.
[Error] MOCK ERROR: Error requesting AWS credentials
"
`;

exports[`lambda flare convertToCSV handles missing timestamp and message in log events 1`] = `
"timestamp,datetime,message
\\"\\",,\\"Log 1\\"
\\"456\\",1970-01-01 00:00:00.456,\\"\\""
`;

exports[`lambda flare convertToCSV returns a CSV string from an array of log events 1`] = `
"timestamp,datetime,message
\\"123\\",1970-01-01 00:00:00.123,\\"Log 1\\"
\\"456\\",1970-01-01 00:00:00.456,\\"Log 2\\""
`;

exports[`lambda flare convertToCSV returns a CSV string with only headers when given an empty array 1`] = `"timestamp,datetime,message"`;

exports[`lambda flare getAllLogs throws an error when unable to get log events 1`] = `[Error: Unable to get log events for stream streamName: Error getting log events]`;

exports[`lambda flare getAllLogs throws an error when unable to get log streams 1`] = `[Error: Unable to get log streams: Error getting log streams]`;

exports[`lambda flare getTags should return the tags when they exist 1`] = `
Object {
  "Key1": "Value1",
  "Key2": "Value2",
}
`;

exports[`lambda flare gets CloudWatch Logs does not get logs when --with-logs is not included 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare gets CloudWatch Logs gets logs, saves, and sends correctly when --with-logs is included 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

🌧 Getting CloudWatch logs...

✅ Found log streams:
• Stream1
• Stream2
• Stream3

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json
• Saved logs to ./logs/Stream1
• Saved logs to ./logs/Stream2
• Saved logs to ./logs/Stream3


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare gets CloudWatch Logs prints error when getLogEvents throws error 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

🌧 Getting CloudWatch logs...
[Error] Unable to get log events for stream Stream1: MOCK ERROR: Unable to get log events
"
`;

exports[`lambda flare gets CloudWatch Logs prints error when getLogStreamNames throws error 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

🌧 Getting CloudWatch logs...
[Error] Unable to get log streams: MOCK ERROR: Unable to get log stream names
"
`;

exports[`lambda flare gets CloudWatch Logs warns and skips getting logs when getLogStreamNames returns [] 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

🌧 Getting CloudWatch logs...
[!] No CloudWatch log streams were found. Logs will not be retrieved or sent.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare gets CloudWatch Logs warns and skips log when getLogEvents returns [] 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

🌧 Getting CloudWatch logs...

✅ Found log streams:
• Stream1 - [!] No log events found in this stream
• Stream2 - [!] No log events found in this stream
• Stream3 - [!] No log events found in this stream

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare prints correct headers prints dry-run header 1`] = `
"
[Dry Run] 🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] No function name specified. [-f,--function]
"
`;

exports[`lambda flare prints correct headers prints non-dry-run header 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] No function name specified. [-f,--function]
"
`;

exports[`lambda flare prompts for additional files does not request additional files when user answers no 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare prompts for additional files requests additional files when user answers yes 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare prompts for confirmation before sending does not send when user answers prompt with no 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚫 The flare files were not sent based on your selection.
ℹ️ Your output files are located at: mock-folder/.datadog-ci

"
`;

exports[`lambda flare prompts for confirmation before sending sends when user answers prompt with yes 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare validateFilePath throws an error when the file does not exist 1`] = `
"[Error] File path '/not-exists' not found. Please try again.
"
`;

exports[`lambda flare validateFilePath throws an error when the file has already been added 1`] = `
"[!] File '/added' has already been added.
"
`;

exports[`lambda flare validateStartEndFlags throws error when end is invalid 1`] = `"End time must be a time in milliseconds since Unix Epoch. '234abc' is not a number."`;

exports[`lambda flare validateStartEndFlags throws error when end is specified but start is not specified 1`] = `"Start time is required when end time is specified. [--start]"`;

exports[`lambda flare validateStartEndFlags throws error when start is invalid 1`] = `"Start time must be a time in milliseconds since Unix Epoch. '123abc' is not a number."`;

exports[`lambda flare validateStartEndFlags throws error when start is not before the end time 1`] = `"Start time must be before end time."`;

exports[`lambda flare validateStartEndFlags throws error when start is specified but end is not specified 1`] = `"End time is required when start time is specified. [--end]"`;

exports[`lambda flare validates required flags extracts region from function name when given a function ARN 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare validates required flags prints error when end time is invalid 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] End time must be a time in milliseconds since Unix Epoch. '123abc' is not a number.
"
`;

exports[`lambda flare validates required flags prints error when end time is specified but start time is not 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] Start time is required when end time is specified. [--start]
"
`;

exports[`lambda flare validates required flags prints error when no API key in env variables 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] No Datadog API key specified. Set an API key with the DATADOG_API_KEY environment variable.
"
`;

exports[`lambda flare validates required flags prints error when no case ID specified 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] No case ID specified. [-c,--case-id]
"
`;

exports[`lambda flare validates required flags prints error when no email specified 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] No email specified. [-e,--email]
"
`;

exports[`lambda flare validates required flags prints error when no function specified 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] No function name specified. [-f,--function]
"
`;

exports[`lambda flare validates required flags prints error when no region specified 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] No default region specified. [-r,--region]
"
`;

exports[`lambda flare validates required flags prints error when start time is after end time 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] Start time must be before end time.
"
`;

exports[`lambda flare validates required flags prints error when start time is invalid 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] Start time must be a time in milliseconds since Unix Epoch. '123abc' is not a number.
"
`;

exports[`lambda flare validates required flags prints error when start time is specified but end time is not 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...
[Error] End time is required when start time is specified. [--end]
"
`;

exports[`lambda flare validates required flags runs successfully when dry run but no email or case ID is specified 1`] = `
"
[Dry Run] 🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json

🚫 The flare files were not sent as it was executed in dry run mode.
ℹ️ Your output files are located at: mock-folder/.datadog-ci

"
`;

exports[`lambda flare validates required flags runs successfully when start and end times are valid 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare validates required flags runs successfully with all required options specified 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare validates required flags uses API key ENV variable and runs as expected 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare validates required flags uses API key ENV variable and runs as expected 2`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!

🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`lambda flare validates required flags uses region ENV variable when no region specified 1`] = `
"
🐶 Generating Lambda flare to send your configuration to Datadog...

🔑 Getting AWS credentials...

[!] No AWS credentials found, let's set them up! Or you can re-run the command and supply the AWS credentials in the same way when you invoke the AWS CLI.

🔍 Fetching Lambda function configuration...

{
  Environment: {
    Variables: {
      DD_API_KEY: '02**********33bd',
      DD_SITE: 'datadoghq.com',
      DD_LOG_LEVEL: 'debug'
    }
  },
  FunctionArn: 'arn:aws:lambda:us-east-1:123456789012:function:some-function',
  FunctionName: 'some-function'
}

📁 Searching for project files in current directory...
[!] No project files found.


Added 0 custom file(s):

🏷 Getting Resource Tags...
[!] No resource tags were found.

💾 Saving files to mock-folder/.datadog-ci...
• Saved function config to ./function_config.json


🚀 Sending to Datadog Support...

✅ Successfully sent flare file to Datadog Support!
"
`;

exports[`utils maskEnvVars should mask a Cloud Run config correctly 1`] = `
Object {
  "template": Object {
    "containers": Array [
      Object {
        "env": Array [
          Object {
            "name": "DD_API_KEY",
            "value": "02**********33bd",
            "values": "value",
          },
          Object {
            "name": "DD_TRACE_ENABLED",
            "value": "true",
            "values": "value",
          },
          Object {
            "name": "DD_SITE",
            "value": "datad0g.com",
            "values": "value",
          },
        ],
        "image": "gcr.io/datadog-sandbox/nicholas-hulston-docker-test",
      },
    ],
    "someData": "data",
  },
}
`;

exports[`utils maskEnvVars should mask a Lambda config correctly 1`] = `
Object {
  "Environment": Object {
    "Variables": Object {
      "DD_API_KEY": "02**********33bd",
      "DD_LOG_LEVEL": "debug",
      "DD_SITE": "datadoghq.com",
    },
  },
  "FunctionArn": "arn:aws:lambda:us-east-1:123456789012:function:some-function",
  "FunctionName": "some-function",
}
`;
